syntax = "proto3";

package pb;
option go_package = "github.com/rruzicic/globetrotter/bnb/accommodation-service/pb";

import "google/protobuf/timestamp.proto";

message Accommodation {
    // model
    string id = 1;
    google.protobuf.Timestamp created_on = 2;
    google.protobuf.Timestamp modified_on = 3;
    google.protobuf.Timestamp deleted_on = 4;

    repeated string reservations = 5;
    string name = 6;

    // address
    string country = 7;
    string street = 8;
    string streetNum = 9;
    int32 zipCode = 10;

    repeated string commodations = 11;
    repeated string photos = 12;
    int32 guests = 13;
    google.protobuf.Timestamp availabilityStartDate = 14;
    google.protobuf.Timestamp availabilityEndDate = 15;
    float unitPrice = 16;
    bool priceForPerson = 17;
    string user = 18;
    bool autoApprove = 19;
}

message RequestAccommodationById {
    string id = 1;
}

service AccommodationService {
    rpc GetAccommodationById(RequestAccommodationById) returns (Accommodation) {}
}
