syntax = "proto3";

package pb;
option go_package = "github.com/rruzicic/globetrotter/bnb/notification-service/pb";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Reservation {
    string accommodationId = 1;
    string userId = 2;
    google.protobuf.Timestamp startDate = 3;
    google.protobuf.Timestamp endDate = 4;
    int32 numOfGuests = 5;
    bool isApproved = 6;
    float totalPrice = 7;
}

service NotificationService {
    rpc ReservationCreated(Reservation) returns (google.protobuf.Empty) {}
    rpc ReservationCanceled(Reservation) returns (google.protobuf.Empty) {}
}